Fixed background shift on firefox

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4886,7 +4886,7 @@ section.slice {
 /*-----------------------------------*/
 /*-----------------------------------*/
 .header {
-  height: 120px;
+  height: 121px;
   margin-bottom: -2px;
 }
 
